Adding Hyperlink Buttons

--- a/about.html
+++ b/about.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="CeliaDiller">
 	<meta name="description" content="vintageclothingapp">
 	<title> About Celia Diller UX/UI Designer in Atlanta</title>
+<!-- For the css -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+ 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
+</html>
+
 
 <!-- For the header -->
 <body>
@@ -13,8 +26,8 @@
 <header>
     <div>
 				<picture>
-  					<source srcset="img/logo@1.jpg" media="(max-width:767px)">
-  					<img src="img/logo@2.jpg" alt="Celia Diller logo">
+  					<source srcset="img/logo@1.png" media="(max-width:767px)">
+  					<img src="img/logo@2.png" alt="Celia Diller logo">
 				</picture>
 
 				<nav>
@@ -63,12 +76,13 @@ and Android • Developing low, mid and high-fidelity wireframes platforms
 
 <!-- For the footer -->
 <footer id="contact"> </footer>
+<body>
 <h1>Get In Touch!</h1>
-<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+<a href="celiadiller@gmail.com" class="button contact">You can contact me with professional questions, comments, or offers at celiadiller@gmail.com</a>
 
 <a href="ANOTHER-SOCIAL-LINK">
 	<nav>
-		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
+		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/" class="button contact">LinkedIn</a>
 	</nav>
 
 	<picture>
