--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -5,6 +5,15 @@
 	<meta name="author" content="CeliaDiller">
 	<meta name="description" content="vintageclothingapp">
 	<title>Graphic Detail</title>
+	<!-- For the css -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	 <link rel="stylesheet" type="text/css" href="css/style.css">
+
+	 <link rel="preconnect" href="https://fonts.googleapis.com">
+	 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <h2>Graphic Detail</h2>
@@ -44,6 +53,7 @@ create a beautiful, aesthetically pleasing app.</p>
 
 <a href="ANOTHER-SOCIAL-LINK">
 	<nav>
+		<a href="#" class="button">Read more</a>
 		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
 	</nav>
 
