--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 	<meta name="author" content="CeliaDiller">
 	<meta name="description" content="vintageclothingapp">
 	<title>Celia Diller UX/UI Designer Atlanta</title>
+	<!-- For the css -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <!-- For the header -->
@@ -13,8 +23,8 @@
 	<header>
     <div>
 				<picture>
-  					<source srcset="img/logo@1.jpg" media="(max-width:767px)">
-  					<img src="img/logo@2.jpg" alt="Celia Diller logo">
+  					<source srcset="img/logo@1.png" media="(max-width:767px)">
+  					<img src="img/logo@2.png" alt="Celia Diller logo">
 				</picture>
 
 				<nav>
@@ -90,6 +100,7 @@
 
 <a href="ANOTHER-SOCIAL-LINK">
 	<nav>
+		<a href="#" class="button">Read more</a>
 		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
 	</nav>
 
