--- a/about.html
+++ b/about.html
@@ -22,13 +22,18 @@
 
 <!-- For the header -->
 <body>
-
 <header>
     <div>
-				<picture>
-  					<source srcset="img/logo@1.png" media="(max-width:767px)">
-  					<img src="img/logo@2.png" alt="Celia Diller logo">
-				</picture>
+			<picture>
+					<header>
+					<div class="container">
+					<source srcset="img/logo@1.png" media="(max-width:767px)">
+					<img src="img/logo@2.png" alt="Celia Diller logo">
+					<nav>
+						<ul class="navigation">
+					</nav>
+					</header>
+			</picture>
 
 				<nav>
   				<ul>
@@ -45,8 +50,14 @@
     <h2>Hi! My name is Celia Diller- a UI/UX Design Student </h2>
 
     <picture>
+			<header>
+				<div class="container">
         <source srcset="img/profile.png" media="(max-width:767px)">
         <img src="img/profile.png" alt="Celia Diller profile">
+				<nav>
+					<ul class="navigation">
+				</nav>
+			</header>
     </picture>
 
 <p>
@@ -78,7 +89,7 @@ and Android • Developing low, mid and high-fidelity wireframes platforms
 <footer id="contact"> </footer>
 <body>
 <h1>Get In Touch!</h1>
-<a href="celiadiller@gmail.com" class="button contact">You can contact me with professional questions, comments, or offers at celiadiller@gmail.com</a>
+<a href="celiadiller@gmail.com" class="button contact">You can contact me with questions, comments, or offers at celiadiller@gmail.com</a>
 
 <a href="ANOTHER-SOCIAL-LINK">
 	<nav>
@@ -86,8 +97,14 @@ and Android • Developing low, mid and high-fidelity wireframes platforms
 	</nav>
 
 	<picture>
+		<header>
+		<div class="container">
     <source srcset="img/link@1.png" media="(max-width:767px)">
-    <img src="img/link@1.png" alt="Adorn You">
+    <img src="img/link@1.png" alt="Celia Diller LinkedIn">
+		<nav>
+			<ul class="navigation">
+		</nav>
+		</header>
   </picture>
 </a>
 
