--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -16,8 +16,17 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<h2>Graphic Detail</h2>
-<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+<main>
+<header>
+
+<div id="hero">
+<div class="container">
+<h1>
+
+<div id="work">
+<div class="container">
+<h3>My Work</h3>
+<div class="row">
 
 <nav>
   <ul>
@@ -26,10 +35,20 @@
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
+</header>
+
+<h2>Graphic Detail</h2>
+<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
 
 <picture>
+	<header>
+	<div class="container">
   <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
   <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
+	<nav>
+		<ul class="navigation">
+	</nav>
+	</header>
 </picture>
 
 <p>Graphic Detail was my first design in the course. It helped me learn all what
@@ -38,18 +57,33 @@ others have done with their apps and coordinate my design with that to
 create a beautiful, aesthetically pleasing app.</p>
 
 <picture>
+	<header>
+	<div class="container">
+
   <source srcset="img/graphic_detail/graphic_detail_long_artboard.jpg" media="(max-width:767px)">
   <img src="img/graphic_detail/graphic_detail_long_artboard.jpg" alt="Graphic Detail">
+	<nav>
+		<ul class="navigation">
+	</nav>
+	</header>
 </picture>
 
 <picture>
-  <source srcset="img/graphic_detail/graphic_detail_stlye_guide.jpg" media="(max-width:767px)">
+	<header>
+	<div class="container">
+  <source srcset="img/graphic_detail/graphic_detail_style_guide.jpg" media="(max-width:767px)">
   <img src="img/graphic_detail/graphic_detail_style_guide.jpg" alt="Graphic Detail">
+	<nav>
+		<ul class="navigation">
+	</nav>
+	</header>
 </picture>
 
 <footer id="contact"> </footer>
 <h1>Get In Touch!</h1>
 <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+
+</main>
 
 <a href="ANOTHER-SOCIAL-LINK">
 	<nav>
@@ -58,11 +92,18 @@ create a beautiful, aesthetically pleasing app.</p>
 	</nav>
 
 	<picture>
+		<header>
+		<div class="container">
     <source srcset="img/link@1.png" media="(max-width:767px)">
-    <img src="img/link@1.png" alt="Adorn You">
+    <img src="img/link@1.png" alt="Celia Diller LinkedIn">
+		<nav>
+			<ul class="navigation">
+		</nav>
+		</header>
   </picture>
 </a>
 
 <div>
 <p>Copyright Celia Diller 2020</p>
 </div>
+</html>
