--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
 	<header>
     <div>
 				<picture>
+						<header>
+						<div class="container">
   					<source srcset="img/logo@1.png" media="(max-width:767px)">
   					<img src="img/logo@2.png" alt="Celia Diller logo">
+						<nav>
+						  <ul class="navigation">
+						</nav>
+						</header>
 				</picture>
 
 				<nav>
@@ -44,8 +50,15 @@
 
 <!-- For the hero section -->
 <main>
+	<header>
+			<div id="hero">
+	  	<div class="container">
+	    <h1>
 
-  <h2>Work</h2>
+			<div id="work">
+  		<div class="container">
+    	<h2>My Work</h2>
+      <div class="row">
 
   <h3>Graphic Detail</h3>
   <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
@@ -93,8 +106,15 @@
     <a href="#">View Project</a>
   </nav>
 
+</header>
+</main>
+
   <!-- For your work/projects -->
-<footer id="contact"> </footer>
+<main>
+<header>
+	<div id="hero">
+	<div class="container">
+		<h1>
 <h1>Get In Touch!</h1>
 <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
 
@@ -109,17 +129,16 @@
     <img src="img/link@1.png" alt="Adorn You">
   </picture>
 </a>
+</header>
+</main>
 
 <!-- For your footer -->
-		<footer>
+<footer>
+  	<div class="container">
+    <h2></h2>
 			<div>
 				<p>Copyright Celia Diller 2020</p>
 			</div>
-		</footer>
-	<div>Contact</div>
 </footer>
-	</main>
 </body>
-
-
 </html>
