Edits done on pages before navigation bar

--- a/about.html
+++ b/about.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="CeliaDiller">
 	<meta name="description" content="vintageclothingapp">
-	<title> About Celia Diller UX/UI Designer in Atlanta</title>
-<!-- For the css -->
+	<title>Celia Diller UX/UI Designer Atlanta</title>
+	<!-- For the css -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
- 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
-</html>
+
 
 
 <!-- For the header -->
 <body>
-<header>
-    <div>
-			<picture>
-					<header>
-					<div class="container">
-					<source srcset="img/logo@1.png" media="(max-width:767px)">
-					<img src="img/logo@2.png" alt="Celia Diller logo">
-					<nav>
-						<ul class="navigation">
-					</nav>
-					</header>
-			</picture>
+	<header>
+		<div id="hero">
+		<div class="container">
+				<picture>
+						<header>
+						<div class="container">
+  					<source srcset="img/logo@1.png" media="(max-width:767px)">
+  					<img src="img/logo@2.png" alt="Celia Diller logo">
+						<nav>
+						  <ul class="navigation">
+						</nav>
+						</header>
+				</picture>
 
 				<nav>
   				<ul>
-    				<li><a href="index.html">Work</a></li>
-    				<li><a href="about.html">About</a></li>
-    				<li><a href="#contact">Contact</a></li>
+    				<li><a href="index.html"class="button contact">Work</a></li>
+    				<li><a href="about.html"class="button contact">About</a></li>
+    				<li><a href="#contact"class="button contact">Contact</a></li>
   				</ul>
 				</nav>
-    </div>
-</header>
+				<body>
+					<h1>About</h1>
+			    <h2>Hi! My name is Celia Diller- a UI/UX Design Student! </h2>
+				</body>
 
-<div>
-    <h1>About</h1>
-    <h2>Hi! My name is Celia Diller- a UI/UX Design Student </h2>
+		</header>
+
+<!-- For the hero section -->
 
     <picture>
 			<header>
@@ -85,34 +86,35 @@ and Android • Developing low, mid and high-fidelity wireframes platforms
 </p>
 </div>
 
-<!-- For the footer -->
-<footer id="contact"> </footer>
-<body>
-<h1>Get In Touch!</h1>
-<a href="celiadiller@gmail.com" class="button contact">You can contact me with questions, comments, or offers at celiadiller@gmail.com</a>
+<!-- For your work/projects -->
+<main>
+	<div id="work">
+	<div class="container">
+			<h1>Get In Touch!</h1>
+			<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
 
-<a href="ANOTHER-SOCIAL-LINK">
-	<nav>
-		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/" class="button contact">LinkedIn</a>
-	</nav>
-
-	<picture>
-		<header>
-		<div class="container">
-    <source srcset="img/link@1.png" media="(max-width:767px)">
-    <img src="img/link@1.png" alt="Celia Diller LinkedIn">
+	<a href="ANOTHER-SOCIAL-LINK">
 		<nav>
-			<ul class="navigation">
+			<a href="#" class="button">Read more</a>
+			<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
 		</nav>
-		</header>
-  </picture>
+
+<header>
+<picture>
+	<source srcset="img/link@1.png" media="(max-width:767px)">
+	<img src="img/link@1.png" alt="Adorn You">
+</picture>
 </a>
+</header>
+</main>
 
+<!-- For your footer -->
 <footer>
-  <div>
-      <p>Copyright Celia Diller 2020</p>
-  </div>
+	<div class="container">
+	<h2></h2>
+		<div>
+			<p>Copyright Celia Diller 2020</p>
+		</div>
 </footer>
-
 </body>
 </html>
