--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -4,41 +4,47 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="CeliaDiller">
 	<meta name="description" content="vintageclothingapp">
-	<title>Graphic Detail</title>
+	<title>Celia Diller UX/UI Designer Atlanta</title>
 	<!-- For the css -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-	 <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	 <link rel="preconnect" href="https://fonts.googleapis.com">
-	 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
 
-	 <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<main>
-<header>
+<!-- For the header -->
+<body>
+	<header>
+		<div id="hero">
+		<div class="container">
+				<picture>
+						<header>
+						<div class="container">
+  					<source srcset="img/logo@1.png" media="(max-width:767px)">
+  					<img src="img/logo@2.png" alt="Celia Diller logo">
+						<nav>
+						  <ul class="navigation">
+						</nav>
+						</header>
+				</picture>
 
-<div id="hero">
-<div class="container">
-<h1>
+				<nav>
+  				<ul>
+    				<li><a href="index.html"class="button contact">Work</a></li>
+    				<li><a href="about.html"class="button contact">About</a></li>
+    				<li><a href="#contact"class="button contact">Contact</a></li>
+  				</ul>
+				</nav>
+				<body>
+					<h2>Graphic Detail</h2>
+					<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+				</body>
 
-<div id="work">
-<div class="container">
-<h3>My Work</h3>
-<div class="row">
-
-<nav>
-  <ul>
-    <li><a href="index.html">Work</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
-</header>
-
-<h2>Graphic Detail</h2>
-<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+		</header>
 
 <picture>
 	<header>
@@ -78,32 +84,36 @@ create a beautiful, aesthetically pleasing app.</p>
 	</nav>
 	</header>
 </picture>
+</header>
+<!-- For your work/projects -->
+<main>
+	<div id="work">
+	<div class="container">
+			<h1>Get In Touch!</h1>
+			<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
 
-<footer id="contact"> </footer>
-<h1>Get In Touch!</h1>
-<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+	<a href="ANOTHER-SOCIAL-LINK">
+		<nav>
+			<a href="#" class="button">Read more</a>
+			<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
+		</nav>
 
+<header>
+<picture>
+	<source srcset="img/link@1.png" media="(max-width:767px)">
+	<img src="img/link@1.png" alt="Adorn You">
+</picture>
+</a>
+</header>
 </main>
 
-<a href="ANOTHER-SOCIAL-LINK">
-	<nav>
-		<a href="#" class="button">Read more</a>
-		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-	</nav>
-
-	<picture>
-		<header>
-		<div class="container">
-    <source srcset="img/link@1.png" media="(max-width:767px)">
-    <img src="img/link@1.png" alt="Celia Diller LinkedIn">
-		<nav>
-			<ul class="navigation">
-		</nav>
-		</header>
-  </picture>
-</a>
-
-<div>
-<p>Copyright Celia Diller 2020</p>
-</div>
+<!-- For your footer -->
+<footer>
+	<div class="container">
+	<h2></h2>
+		<div>
+			<p>Copyright Celia Diller 2020</p>
+		</div>
+</footer>
+</body>
 </html>
