--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 
 <!-- For the header -->
-
 <body>
 	<header>
-    <div>
+		<div id="hero">
+		<div class="container">
 				<picture>
 						<header>
 						<div class="container">
@@ -35,110 +34,131 @@
 
 				<nav>
   				<ul>
-    				<li><a href="index.html">Work</a></li>
-    				<li><a href="about.html">About</a></li>
-    				<li><a href="#contact">Contact</a></li>
+    				<li><a href="index.html"class="button contact">Work</a></li>
+    				<li><a href="about.html"class="button contact">About</a></li>
+    				<li><a href="#contact"class="button contact">Contact</a></li>
   				</ul>
 				</nav>
 
-		<h1>Hi! My name is Celia Diller- a UI/UX Design Student </h1>
-		<p>I  am UI/UX design student and am very excited to start fine tuning my designs to work with developers. I love
-			creating and editing content to make it the best it can possibly be for users.</p>
-	</div>
+				<body>
+						<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
+						<p>I  am UI/UX design student and am very excited to start fine tuning my designs to work with developers. I love
+							creating and editing content to make it the best it can possibly be for users.</p>
+						<h1> Enjoy My Work! </h1>
+				</body>
+				</div>
+		</header>
 
-</header>
+
 
 <!-- For the hero section -->
 <main>
-	<header>
+	<body>
 			<div id="hero">
 	  	<div class="container">
 	    <h1>
 
-			<div id="work">
-  		<div class="container">
-    	<h2>My Work</h2>
-      <div class="row">
 
-  <h3>Graphic Detail</h3>
-  <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+	<h3>Graphic Detail</h3>
+	<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
 
   <picture>
+
+		<header>
+		<div class="container">
     <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
     <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
-  </picture>
+		</header>
+	</picture>
 
-  <nav>
-    <a href="graphic_detail.html">View Project</a>
-  </nav>
+		<nav>
+			<ul class="navigation">
+		</nav>
+		<nav>
+	    <a href="graphic_detail.html"class="button contact">View Project</a>
+	  </nav>
 
-  <h3>Barcelona</h3>
+
+	<h3>Barcelona</h3>
 	<p>A tapas app that helps explain the variety of food items on the menu</p>
 
 	<picture>
+		<header>
+		<div class="container">
 		<source srcset="img/barcelona/barcelona_@1.jpg" media="(max-width:767px)">
 		<img src="img/barcelona/barcelona_@2.jpg" alt="Barcelona">
+		</header>
+
+		<nav>
+			<a href="#"class="button contact">View Project</a>
+		</nav>
+
 	</picture>
 
-  <nav>
-    <a href="#">View Project</a>
-  </nav>
 
-  <h3>Let's Eat!</h3>
+	<h3>Let's Eat!</h3>
 	<p> A meal planner app that encourages healthy eating to all users</p>
+
 	<picture>
+
+		<header>
+		<div class="container">
     <source srcset="img/let's_eat/let's_eat@1.jpg" media="(max-width:767px)">
     <img src="img/let's_eat/let's_eat@2.jpg" alt="Let's Eat!">
+		</header>
+
+		<nav>
+	    <a href="#"class="button contact">View Project</a>
+	  </nav>
+
   </picture>
 
-  <nav>
-    <a href="#">View Project</a>
-  </nav>
-
-  <h3>Adorn You</h3>
+	<h3>Adorn You</h3>
 	<p>A app that allows local artist to share and sell their work!</p>
+
 	<picture>
+		<header>
+		<div class="container">
     <source srcset="img/adorn_you/adorn_you@1.jpg" media="(max-width:767px)">
     <img src="img/adorn_you/adorn_you@2.jpg" alt="Adorn You">
+		</header>
+
+		<nav>
+	    <a href="#"class="button contact">View Project</a>
+	  </nav>
+
   </picture>
+</body>
 
-  <nav>
-    <a href="#">View Project</a>
-  </nav>
-
-</header>
-</main>
-
-  <!-- For your work/projects -->
+<!-- For your work/projects -->
 <main>
-<header>
-	<div id="hero">
+	<div id="work">
 	<div class="container">
-		<h1>
-<h1>Get In Touch!</h1>
-<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+			<h1>Get In Touch!</h1>
+			<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
 
-<a href="ANOTHER-SOCIAL-LINK">
-	<nav>
-		<a href="#" class="button">Read more</a>
-		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-	</nav>
+	<a href="ANOTHER-SOCIAL-LINK">
+		<nav>
+			<a href="#" class="button">Read more</a>
+			<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
+		</nav>
 
-	<picture>
-    <source srcset="img/link@1.png" media="(max-width:767px)">
-    <img src="img/link@1.png" alt="Adorn You">
-  </picture>
+<header>
+<picture>
+	<source srcset="img/link@1.png" media="(max-width:767px)">
+	<img src="img/link@1.png" alt="Adorn You">
+</picture>
 </a>
 </header>
 </main>
 
 <!-- For your footer -->
 <footer>
-  	<div class="container">
-    <h2></h2>
-			<div>
-				<p>Copyright Celia Diller 2020</p>
-			</div>
+	<div class="container">
+	<h2></h2>
+		<div>
+			<p>Copyright Celia Diller 2020</p>
+		</div>
 </footer>
-</body>
+</main>
 </html>
