CSC Style Editing
If committed, this commit will add style choices that help develop my brand

--- a/about.html
+++ b/about.html
@@ -45,8 +45,7 @@
 					<h1>About</h1>
 			    <h2>Hi! My name is Celia Diller- a UI/UX Design Student! </h2>
 				</body>
-
-		</header>
+</header>
 
 <!-- For the hero section -->
 
@@ -58,36 +57,39 @@
 				<nav>
 					<ul class="navigation">
 				</nav>
+				<body>
+				<p>
+				My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in Biology
+				and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years and
+				am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX design
+				field, I had internships with social media marketing and website design fields. My artistic side bloomed
+				during college when I started to create drawings and paintings for fun. I love creating content that helps
+				small businesses grow. I have juggled many things in the past and strive to do my best work with everything I
+				take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine my love
+				of design and hard work of learning biology into a career. I am looking for a place where I can strive to be
+				my best innovative and creative self.
+				</p>
+
+				<h3>Skills and Tools:</h3>
+				<p>
+				• User Flow Charts • User Research/Testing • Design/Alignment Skills • Knowledge of the standards of IOS
+				and Android • Developing low, mid and high-fidelity wireframes platforms
+				</p>
+
+				<h3>Tools Used:</h3>
+
+				<p>
+				• Adobe XD • Marvel • Sketch • Figma • Procreate • Adobe Photoshop
+				</p>
+				</div>
+				</body>
 			</header>
     </picture>
 
-<p>
-My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in Biology
-and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years and
-am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX design
-field, I had internships with social media marketing and website design fields. My artistic side bloomed
-during college when I started to create drawings and paintings for fun. I love creating content that helps
-small businesses grow. I have juggled many things in the past and strive to do my best work with everything I
-take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine my love
-of design and hard work of learning biology into a career. I am looking for a place where I can strive to be
-my best innovative and creative self.
-</p>
-
-<h3>Skills and Tools:</h3>
-<p>
-• User Flow Charts • User Research/Testing • Design/Alignment Skills • Knowledge of the standards of IOS
-and Android • Developing low, mid and high-fidelity wireframes platforms
-</p>
-
-<h3>Tools Used:</h3>
-
-<p>
-• Adobe XD • Marvel • Sketch • Figma • Procreate • Adobe Photoshop
-</p>
-</div>
 
 <!-- For your work/projects -->
 <main>
+	<header>
 	<div id="work">
 	<div class="container">
 			<h1>Get In Touch!</h1>
@@ -105,6 +107,7 @@ and Android • Developing low, mid and high-fidelity wireframes platforms
 	<img src="img/link@1.png" alt="Adorn You">
 </picture>
 </a>
+</header>
 </header>
 </main>
 
