--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -54,13 +54,16 @@
 	<nav>
 		<ul class="navigation">
 	</nav>
+
+	<p>Graphic Detail was my first design in the course. It helped me learn all what
+	UI/UX design was about. I got to create my first design by looking at what
+	others have done with their apps and coordinate my design with that to
+	create a beautiful, aesthetically pleasing app.</p>
+	
 	</header>
 </picture>
 
-<p>Graphic Detail was my first design in the course. It helped me learn all what
-UI/UX design was about. I got to create my first design by looking at what
-others have done with their apps and coordinate my design with that to
-create a beautiful, aesthetically pleasing app.</p>
+
 
 <picture>
 	<header>
@@ -87,6 +90,7 @@ create a beautiful, aesthetically pleasing app.</p>
 </header>
 <!-- For your work/projects -->
 <main>
+	<header>
 	<div id="work">
 	<div class="container">
 			<h1>Get In Touch!</h1>
@@ -104,6 +108,7 @@ create a beautiful, aesthetically pleasing app.</p>
 	<img src="img/link@1.png" alt="Adorn You">
 </picture>
 </a>
+</header>
 </header>
 </main>
 
