--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 
 
 <!-- For the hero section -->
-<main>
 	<body>
 			<div id="hero">
 	  	<div class="container">
@@ -128,10 +127,10 @@
 	  </nav>
 
   </picture>
-</body>
-
+	</body>
 <!-- For your work/projects -->
-<main>
+<body>
+	<header>
 	<div id="work">
 	<div class="container">
 			<h1>Get In Touch!</h1>
@@ -150,6 +149,7 @@
 </picture>
 </a>
 </header>
+</header>
 </main>
 
 <!-- For your footer -->
@@ -160,5 +160,5 @@
 			<p>Copyright Celia Diller 2020</p>
 		</div>
 </footer>
-</main>
+</body>
 </html>
