--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<!-- START PROJECT BLOCK EXERCISE 1.3 -->
+<div class="row">
+  <div class="col-md-6">
+		<div class="col-lg-8">
+			<div class="col-xl-4">
+
+    <picture>
 <!-- For the header -->
 <body>
 	<header>
