--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -16,6 +16,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<!-- START PROJECT BLOCK EXERCISE 1.3 -->
+<div class="row">
+  <div class="col-md-6">
+		<div class="col-lg-8">
+			<div class="col-xl-4">
+    <picture>
+
+
 <!-- For the header -->
 <body>
 	<header>
@@ -59,7 +67,7 @@
 	UI/UX design was about. I got to create my first design by looking at what
 	others have done with their apps and coordinate my design with that to
 	create a beautiful, aesthetically pleasing app.</p>
-	
+
 	</header>
 </picture>
 
