Edits Made after talking to Tutor
If committed, this commit will help reorganize and eliminate extra code.

--- a/index.html
+++ b/index.html
@@ -16,28 +16,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<!-- START PROJECT BLOCK EXERCISE 1.3 -->
-<div class="row">
-  <div class="col-md-6">
-		<div class="col-lg-8">
-			<div class="col-xl-4">
-
-    <picture>
 <!-- For the header -->
 <body>
-	<header>
-		<div id="hero">
+	<div id="hero">
 		<div class="container">
+			<header>
 				<picture>
-						<header>
-						<div class="container">
   					<source srcset="img/logo@1.png" media="(max-width:767px)">
   					<img src="img/logo@2.png" alt="Celia Diller logo">
-						<nav>
-						  <ul class="navigation">
-						</nav>
-						</header>
 				</picture>
+
 
 				<nav>
   				<ul>
@@ -46,126 +34,95 @@
     				<li><a href="#contact"class="button contact">Contact</a></li>
   				</ul>
 				</nav>
+			</header>
 
-				<body>
+				<div>
 						<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
 						<p>I  am UI/UX design student and am very excited to start fine tuning my designs to work with developers. I love
 							creating and editing content to make it the best it can possibly be for users.</p>
 						<h1> Enjoy My Work! </h1>
-				</body>
 				</div>
-		</header>
-
-
+			</div>
 
 <!-- For the hero section -->
-	<body>
-			<div id="hero">
-	  	<div class="container">
-	    <h1>
+<div class="container">
 
+	<div class="row">
+		<div class="col-md-6">
+			<div class="descWrapper">
+				<h3>Graphic Detail</h3>
+				<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+				<a href="graphic_detail.html"class="button contact">View Project</a>
+			</div>
+		</div>
 
-	<h3>Graphic Detail</h3>
-	<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+		<div class="col-md-6">
+  		<picture>
+    		<source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
+    		<img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
+			</picture>
+		</div>
+	</div>
 
-  <picture>
-
-		<header>
-		<div class="container">
-    <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
-    <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
-		</header>
-	</picture>
-
-		<nav>
-			<ul class="navigation">
-		</nav>
-		<nav>
-	    <a href="graphic_detail.html"class="button contact">View Project</a>
-	  </nav>
-
-
-	<h3>Barcelona</h3>
-	<p>A tapas app that helps explain the variety of food items on the menu</p>
-
-	<picture>
-		<header>
-		<div class="container">
-		<source srcset="img/barcelona/barcelona_@1.jpg" media="(max-width:767px)">
-		<img src="img/barcelona/barcelona_@2.jpg" alt="Barcelona">
-		</header>
-
-		<nav>
+	<div class="row">
+		<div class="col-md-6">
+			<picture>
+				<source srcset="img/barcelona/barcelona_@1.jpg" media="(max-width:767px)">
+				<img src="img/barcelona/barcelona_@2.jpg" alt="Barcelona">
+			</picture>
+		</div>
+		<div class="col-md-6">
+			<div class/"descWrapper">
+			<h3>Barcelona</h3>
+			<p>A tapas app that helps explain the variety of food items on the menu</p>
 			<a href="#"class="button contact">View Project</a>
-		</nav>
+			</div>
+		</div>
+	</div>
 
-	</picture>
+	<div class="row">
+		<div class="col-md-6">
+			<div class="descWrapper">
+			<h3>Let's Eat!</h3>
+			<p> A meal planner app that encourages healthy eating to all users</p>
+			<a href="#"class="button contact">View Project</a>
+			</div>
+		</div>
 
+		<div class="col-md-6">
+			<picture>
+    		<source srcset="img/let's_eat/let's_eat@1.jpg" media="(max-width:767px)">
+    		<img src="img/let's_eat/let's_eat@2.jpg" alt="Let's Eat!">
+  		</picture>
+		</div>
+	</div>
 
-	<h3>Let's Eat!</h3>
-	<p> A meal planner app that encourages healthy eating to all users</p>
+	<div class="row">
+		<div class="col-md-6">
+			<picture>
+    		<source srcset="img/adorn_you/adorn_you@1.jpg" media="(max-width:767px)">
+    		<img src="img/adorn_you/adorn_you@2.jpg" alt="Adorn You">
+  		</picture>
+		</div>
 
-	<picture>
-
-		<header>
-		<div class="container">
-    <source srcset="img/let's_eat/let's_eat@1.jpg" media="(max-width:767px)">
-    <img src="img/let's_eat/let's_eat@2.jpg" alt="Let's Eat!">
-		</header>
-
-		<nav>
-	    <a href="#"class="button contact">View Project</a>
-	  </nav>
-
-  </picture>
-
-	<h3>Adorn You</h3>
-	<p>A app that allows local artist to share and sell their work!</p>
-
-	<picture>
-		<header>
-		<div class="container">
-    <source srcset="img/adorn_you/adorn_you@1.jpg" media="(max-width:767px)">
-    <img src="img/adorn_you/adorn_you@2.jpg" alt="Adorn You">
-		</header>
-
-		<nav>
-	    <a href="#"class="button contact">View Project</a>
-	  </nav>
-
-  </picture>
-	</body>
-<!-- For your work/projects -->
-<body>
-	<header>
-	<div id="work">
-	<div class="container">
-			<h1>Get In Touch!</h1>
-			<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-
-	<a href="ANOTHER-SOCIAL-LINK">
-		<nav>
-			<a href="#" class="button">Read more</a>
-			<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-		</nav>
-
-<header>
-<picture>
-	<source srcset="img/link@1.png" media="(max-width:767px)">
-	<img src="img/link@1.png" alt="Adorn You">
-</picture>
-</a>
-</header>
-</header>
-</main>
+		<div class="col-md-6">
+			<div class/"descWrapper">
+			<h3>Adorn You</h3>
+			<p>A app that allows local artist to share and sell their work!</p>
+			<a href="#"class="button contact">View Project</a>
+			</div>
+		</div>
+	</div>
+</div>
 
 <!-- For your footer -->
-<footer>
-	<div class="container">
-	<h2></h2>
-		<div>
+	<footer>
+		<div class="container">
+			<h1>Get In Touch!</h1>
+			<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+			<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
 			<p>Copyright Celia Diller 2020</p>
 		</div>
-</footer>
+	</footer>
 </body>
 </html>
