--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
   					<img src="img/logo@2.png" alt="Celia Diller logo">
 				</picture>
 
-
 				<nav>
   				<ul>
     				<li><a href="index.html"class="button contact">Work</a></li>
@@ -113,7 +112,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div
 
 <!-- For your footer -->
 	<footer>
