--- a/about.html
+++ b/about.html
@@ -16,29 +16,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<!-- START PROJECT BLOCK EXERCISE 1.3 -->
-<div class="row">
-  <div class="col-md-6">
-		<div class="col-lg-8">
-			<div class="col-xl-4">
-    <picture>
-
-
-
 <!-- For the header -->
 <body>
-	<header>
-		<div id="hero">
+	<div id="hero">
 		<div class="container">
+			<header>
 				<picture>
-						<header>
-						<div class="container">
   					<source srcset="img/logo@1.png" media="(max-width:767px)">
   					<img src="img/logo@2.png" alt="Celia Diller logo">
-						<nav>
-						  <ul class="navigation">
-						</nav>
-						</header>
 				</picture>
 
 				<nav>
@@ -48,11 +33,13 @@
     				<li><a href="#contact"class="button contact">Contact</a></li>
   				</ul>
 				</nav>
-				<body>
-					<h1>About</h1>
-			    <h2>Hi! My name is Celia Diller- a UI/UX Design Student! </h2>
-				</body>
-</header>
+			</header>
+
+				<div>
+						<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
+						<h1> Enjoy My Work! </h1>
+				</div>
+			</div>
 
 <!-- For the hero section -->
 
@@ -93,38 +80,14 @@
 			</header>
     </picture>
 
-
-<!-- For your work/projects -->
-<main>
-	<header>
-	<div id="work">
-	<div class="container">
-			<h1>Get In Touch!</h1>
-			<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-
-	<a href="ANOTHER-SOCIAL-LINK">
-		<nav>
-			<a href="#" class="button">Read more</a>
-			<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-		</nav>
-
-<header>
-<picture>
-	<source srcset="img/link@1.png" media="(max-width:767px)">
-	<img src="img/link@1.png" alt="Adorn You">
-</picture>
-</a>
-</header>
-</header>
-</main>
-
 <!-- For your footer -->
 <footer>
 	<div class="container">
-	<h2></h2>
-		<div>
-			<p>Copyright Celia Diller 2020</p>
-		</div>
+		<h1>Get In Touch!</h1>
+		<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
+		<p>Copyright Celia Diller 2020</p>
+	</div>
 </footer>
 </body>
 </html>
