--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
 			<div class="descWrapper">
 				<h3>Graphic Detail</h3>
 				<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
-				<a href="graphic_detail.html"class="button contact">View Project</a>
+				<a> href="graphic_detail.html"class="button contact">View Project </a>
 			</div>
 		</div>
 
@@ -705,14 +705,15 @@
 		</div>
 
 		<div class="col-md-6">
-			<div class/"descWrapper">
+			<div class="descWrapper">
 			<h3>Adorn You</h3>
 			<p>A app that allows local artist to share and sell their work!</p>
 			<a href="#"class="button contact">View Project</a>
 			</div>
 		</div>
 	</div>
-</div
+</div>
+
 
 <!-- For your footer -->
 	<footer>
