--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
 			<div class="descWrapper">
 				<h3>Graphic Detail</h3>
 				<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
-				<a> href="graphic_detail.html"class="button contact">View Project </a>
+				<a href="graphic_detail.html" class="button contact">View Project</a>
 			</div>
 		</div>
 
@@ -670,11 +670,12 @@
 				<img src="img/barcelona/barcelona_@2.jpg" alt="Barcelona">
 			</picture>
 		</div>
+
 		<div class="col-md-6">
-			<div class/"descWrapper">
+			<div class="descWrapper">
 			<h3>Barcelona</h3>
 			<p>A tapas app that helps explain the variety of food items on the menu</p>
-			<a href="#"class="button contact">View Project</a>
+			<a href="#" class="button contact">View Project</a>
 			</div>
 		</div>
 	</div>
@@ -684,7 +685,7 @@
 			<div class="descWrapper">
 			<h3>Let's Eat!</h3>
 			<p> A meal planner app that encourages healthy eating to all users</p>
-			<a href="#"class="button contact">View Project</a>
+			<a href="#" class="button contact">View Project</a>
 			</div>
 		</div>
 
@@ -708,7 +709,7 @@
 			<div class="descWrapper">
 			<h3>Adorn You</h3>
 			<p>A app that allows local artist to share and sell their work!</p>
-			<a href="#"class="button contact">View Project</a>
+			<a href="#" class="button contact">View Project</a>
 			</div>
 		</div>
 	</div>
