--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<header>
+  <div class="container">
+
+	</header>
+
+	<!--cdn links-->
+	  <script src="https://kit.fontawesome.com/e6aa32bfe8.js" crossorigin="anonymous"></script>
+
 </head>
 
 <!-- For the header -->
@@ -22,6 +31,7 @@
 		<div class="container">
 			<header>
 				<picture>
+						<div class="navtoggle" id="myNavtoggle">
   					<source srcset="img/logo@1.png" media="(max-width:767px)">
   					<img src="img/logo@2.png" alt="Celia Diller logo">
 				</picture>
@@ -31,6 +41,7 @@
     				<li><a href="index.html"class="button contact">Work</a></li>
     				<li><a href="about.html"class="button contact">About</a></li>
     				<li><a href="#contact"class="button contact">Contact</a></li>
+						<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
   				</ul>
 				</nav>
 			</header>
@@ -723,6 +734,7 @@
 			<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
 			<p>Copyright Celia Diller 2020</p>
 		</div>
+
 	</footer>
 	<script src="js/scripts.js"></script>
 </body>
