--- a/about.html
+++ b/about.html
@@ -16,12 +16,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<!--cdn links-->
+  <script src="https://kit.fontawesome.com/e6aa32bfe8.js" crossorigin="anonymous"></script>
+
 <!-- For the header -->
 <body>
 	<div id="hero">
 		<div class="container">
 			<header>
 				<picture>
+						<div class="navtoggle" id="myNavtoggle">
   					<source srcset="img/logo@1.png" media="(max-width:767px)">
   					<img src="img/logo@2.png" alt="Celia Diller logo">
 				</picture>
@@ -31,6 +35,7 @@
     				<li><a href="index.html"class="button contact">Work</a></li>
     				<li><a href="about.html"class="button contact">About</a></li>
     				<li><a href="#contact"class="button contact">Contact</a></li>
+						<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
   				</ul>
 				</nav>
 			</header>
