--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body>
 	<div id="hero">
 		<div class="container">
+			<div class="navtoggle" id="myNavtoggle">
 			<header>
 				<picture>
-						<div class="navtoggle" id="myNavtoggle">
   					<source srcset="img/logo@1.png" media="(max-width:767px)">
   					<img src="img/logo@2.png" alt="Celia Diller logo">
 				</picture>
@@ -40,7 +40,8 @@
   				<ul>
     				<li><a href="index.html"class="button contact">Work</a></li>
     				<li><a href="about.html"class="button contact">About</a></li>
-    				<li><a href="#contact"class="button contact">Contact</a></li>
+						<li><a href="#resume"class="button contact">Resume</a></li>
+						<li><a href="#contact"class="button contact">Contact</a></li>
 						<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
   				</ul>
 				</nav>
