--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -32,10 +32,10 @@
 	<header>
 		<div id="hero">
 		<div class="container">
+			<div class="navtoggle" id="myNavtoggle">
 				<picture>
 						<header>
 						<div class="container">
-						<div class="navtoggle" id="myNavtoggle">
   					<source srcset="img/logo@1.png" media="(max-width:767px)">
   					<img src="img/logo@2.png" alt="Celia Diller logo">
 						<nav>
@@ -48,6 +48,7 @@
   				<ul>
     				<li><a href="index.html"class="button contact">Work</a></li>
     				<li><a href="about.html"class="button contact">About</a></li>
+						<li><a href="#resume"class="button contact">Resume</a></li>
     				<li><a href="#contact"class="button contact">Contact</a></li>
 						<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
   				</ul>
