--- a/about.html
+++ b/about.html
@@ -1,100 +1,113 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="author" content="CeliaDiller">
-	<meta name="description" content="vintageclothingapp">
-	<title>Celia Diller UX/UI Designer Atlanta</title>
-	<!-- For the css -->
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="author" content="CeliaDiller">
+  <meta name="description" content="vintageclothingapp">
+  <title>Celia Diller UX/UI Designer Atlanta</title>
+  <!-- For the css -->
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/defaults.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--cdn links-->
+  <script src="https://kit.fontawesome.com/e6aa32bfe8.js" crossorigin="anonymous"></script>
 </head>
 
-<!--cdn links-->
-  <script src="https://kit.fontawesome.com/e6aa32bfe8.js" crossorigin="anonymous"></script>
-
 <!-- For the header -->
-<body>
-	<div id="hero">
-		<div class="container">
-			<div class="navtoggle" id="myNavtoggle">
-			<header>
-				<picture>
-  					<source srcset="img/logo@1.png" media="(max-width:767px)">
-  					<img src="img/logo@2.png" alt="Celia Diller logo">
-				</picture>
 
-				<nav>
-  				<ul>
-    				<li><a href="index.html"class="button contact">Work</a></li>
-    				<li><a href="about.html"class="button contact">About</a></li>
-						<li><a href="#resume"class="button contact">Resume</a></li>
-    				<li><a href="#contact"class="button contact">Contact</a></li>
-						<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
-  				</ul>
-				</nav>
-			</header>
+<body>
+  <div id="hero">
+    <div class="container">
+      <div class="navtoggle" id="myNavtoggle">
+        <header>
+          <picture>
+            <source srcset="img/logo@1.png" media="(max-width:767px)">
+            <img src="img/logo@2.png" class="logo" alt="Celia Diller logo">
+          </picture>
+
+					<nav>
+            <ul>
+              <li><a href="index.html" class="button contact">Work</a></li>
+              <li><a href="about.html" class="button contact">About</a></li>
+              <li><a href="#resume" class="button contact">Resume</a></li>
+              <li><a href="#contact" class="button contact">Contact</a></li>
+              <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+            </ul>
+          </nav>
+        </header>
 
 				<div>
-						<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
-						<h1> Enjoy My Work! </h1>
+					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
+					<h1> Enjoy My Work! </h1>
 				</div>
+      </div>
+			<!-- For the hero section -->
+
+
+			<div class="container">
+				<picture>
+					<source srcset="img/profile.png" media="(max-width:767px)">
+					<img src="img/profile.png" alt="Celia Diller profile">
+				</picture>
+
+				<main>
+					<p>
+						My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in
+						Biology
+						and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years
+						and
+						am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX
+						design
+						field, I had internships with social media marketing and website design fields. My artistic side bloomed
+						during college when I started to create drawings and paintings for fun. I love creating content that
+						helps
+						small businesses grow. I have juggled many things in the past and strive to do my best work with
+						everything I
+						take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine
+						my love
+						of design and hard work of learning biology into a career. I am looking for a place where I can strive
+						to be
+						my best innovative and creative self.
+					</p>
+
+					<h3>Skills and Tools:</h3>
+					<p>
+						• User Flow Charts • User Research/Testing • Design/Alignment Skills • Knowledge of the standards of IOS
+						and Android • Developing low, mid and high-fidelity wireframes platforms
+					</p>
+
+					<h3>Tools Used:</h3>
+
+					<p>
+						• Adobe XD • Marvel • Sketch • Figma • Procreate • Adobe Photoshop
+					</p>
+				</main>
 			</div>
-
-<!-- For the hero section -->
-
-    <picture>
-			<header>
-				<div class="container">
-        <source srcset="img/profile.png" media="(max-width:767px)">
-        <img src="img/profile.png" alt="Celia Diller profile">
-				<nav>
-					<ul class="navigation">
-				</nav>
-				<body>
-				<p>
-				My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in Biology
-				and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years and
-				am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX design
-				field, I had internships with social media marketing and website design fields. My artistic side bloomed
-				during college when I started to create drawings and paintings for fun. I love creating content that helps
-				small businesses grow. I have juggled many things in the past and strive to do my best work with everything I
-				take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine my love
-				of design and hard work of learning biology into a career. I am looking for a place where I can strive to be
-				my best innovative and creative self.
-				</p>
-
-				<h3>Skills and Tools:</h3>
-				<p>
-				• User Flow Charts • User Research/Testing • Design/Alignment Skills • Knowledge of the standards of IOS
-				and Android • Developing low, mid and high-fidelity wireframes platforms
-				</p>
-
-				<h3>Tools Used:</h3>
-
-				<p>
-				• Adobe XD • Marvel • Sketch • Figma • Procreate • Adobe Photoshop
-				</p>
-				</div>
-				</body>
-			</header>
-    </picture>
-
-<!-- For your footer -->
-<footer>
-	<div class="container">
-		<h1>Get In Touch!</h1>
-		<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-		<p>Copyright Celia Diller 2020</p>
+		</div>
 	</div>
-</footer>
-	<script src="js/scripts.js"></script>
+
+	<!-- For your footer -->
+  <div class="container">
+    <footer>
+      <h1>Get In Touch!</h1>
+      <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+      <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
+      <p>Copyright Celia Diller 2020</p>
+
+    </footer>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+  <script src="js/scripts.js"></script>
 </body>
+
 </html>
