--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -1,118 +1,106 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="author" content="CeliaDiller">
-	<meta name="description" content="vintageclothingapp">
-	<title>Celia Diller UX/UI Designer Atlanta</title>
-	<!-- For the css -->
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="author" content="CeliaDiller">
+  <meta name="description" content="vintageclothingapp">
+  <title>Celia Diller UX/UI Designer Atlanta</title>
+  <!-- For the css -->
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/defaults.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<!--cdn links-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--cdn links-->
   <script src="https://kit.fontawesome.com/e6aa32bfe8.js" crossorigin="anonymous"></script>
 </head>
 
-<!-- START PROJECT BLOCK EXERCISE 1.3 -->
-<div class="row">
-  <div class="col-md-6">
-		<div class="col-lg-8">
-			<div class="col-xl-4">
-    <picture>
-
-
 <!-- For the header -->
 <body>
-	<header>
-		<div id="hero">
-		<div class="container">
-			<div class="navtoggle" id="myNavtoggle">
-				<picture>
-						<header>
-						<div class="container">
-  					<source srcset="img/logo@1.png" media="(max-width:767px)">
-  					<img src="img/logo@2.png" alt="Celia Diller logo">
-						<nav>
-						  <ul class="navigation">
-						</nav>
-						</header>
-				</picture>
+  <div id="hero">
+    <div class="container">
+      <div class="navtoggle" id="myNavtoggle">
+        <header>
+          <picture>
+            <source srcset="img/logo@1.png" media="(max-width:767px)">
+            <img src="img/logo@2.png" class="logo" alt="Celia Diller logo">
+          </picture>
 
-				<nav>
-  				<ul>
-    				<li><a href="index.html"class="button contact">Work</a></li>
-    				<li><a href="about.html"class="button contact">About</a></li>
-						<li><a href="#resume"class="button contact">Resume</a></li>
-    				<li><a href="#contact"class="button contact">Contact</a></li>
-						<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
-  				</ul>
-				</nav>
-				<body>
-					<h2>Graphic Detail</h2>
-					<p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+					<nav>
+            <ul>
+              <li><a href="index.html" class="button contact">Work</a></li>
+              <li><a href="about.html" class="button contact">About</a></li>
+              <li><a href="#resume" class="button contact">Resume</a></li>
+              <li><a href="#contact" class="button contact">Contact</a></li>
+              <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+            </ul>
+          </nav>
+        </header>
+
+				<div>
+					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
+					<h1> Enjoy My Work! </h1>
+				</div>
+      </div>
+		</div>
+
+<!-- For the body -->
+				<div class="container">
+	        <div class="row">
+	          <div class="col-md-6">
+	            <div class="descWrapper">
+	              <h3>Graphic Detail</h3>
+	              <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+	            </div>
+	          </div>
+
+	          <div class="col-md-6">
+	            <picture>
+	              <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
+	              <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
+	            </picture>
+	          </div>
+	        </div>
+
+			<div class="container">
+							<p>Graphic Detail was my first design in the course. It helped me learn all what
+							UI/UX design was about. I got to create my first design by looking at what
+							others have done with their apps and coordinate my design with that to
+							create a beautiful, aesthetically pleasing app.</p>
+
+							<picture>
+								<source srcset="img/graphic_detail/graphic_detail_long_artboard.jpg" media="(max-width:767px)">
+						  	<img src="img/graphic_detail/graphic_detail_long_artboard.jpg" alt="Graphic Detail">
+							</picture>
+
+							<picture>
+	              <source srcset="img/graphic_detail/graphic_style_guide.jpg" media="(max-width:767px)">
+	              <img src="img/graphic_detail/graphic_detail_style_guide.jpg" alt="Graphic Detail">
+	            </picture>
+
+						</div>
+					</div>
+				</div>
+
+					<!-- For your footer -->
+				  <div class="container">
+				    <footer>
+				      <h1>Get In Touch!</h1>
+				      <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+				      <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
+				      <p>Copyright Celia Diller 2020</p>
+
+				    </footer>
+				  </div>
+				  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+				    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+				  <script src="js/scripts.js"></script>
 				</body>
 
-		</header>
-
-<picture>
-	<header>
-	<div class="container">
-  <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
-  <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
-	<nav>
-		<ul class="navigation">
-	</nav>
-
-	<p>Graphic Detail was my first design in the course. It helped me learn all what
-	UI/UX design was about. I got to create my first design by looking at what
-	others have done with their apps and coordinate my design with that to
-	create a beautiful, aesthetically pleasing app.</p>
-
-	</header>
-</picture>
-
-
-
-<picture>
-	<header>
-	<div class="container">
-
-  <source srcset="img/graphic_detail/graphic_detail_long_artboard.jpg" media="(max-width:767px)">
-  <img src="img/graphic_detail/graphic_detail_long_artboard.jpg" alt="Graphic Detail">
-	<nav>
-		<ul class="navigation">
-	</nav>
-	</header>
-</picture>
-
-<picture>
-	<header>
-	<div class="container">
-  <source srcset="img/graphic_detail/graphic_detail_style_guide.jpg" media="(max-width:767px)">
-  <img src="img/graphic_detail/graphic_detail_style_guide.jpg" alt="Graphic Detail">
-	<nav>
-		<ul class="navigation">
-	</nav>
-	</header>
-</picture>
-</header>
-
-
-<!-- For your footer -->
-<footer>
-	<div class="container">
-		<h1>Get In Touch!</h1>
-		<p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-		<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-		<p>Copyright Celia Diller 2020</p>
-	</div>
-</footer>
-	<script src="js/scripts.js"></script>
-</body>
-</html>
+				</html>
