Correcting default setting

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <!-- For the css -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/defaults.css">
+  <link rel="stylesheet" type="text/css" href="css/default.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
