--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul>
               <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
-              <li><a href="#resume" class="button contact">Resume</a></li>
+              <li><a href="link_to_resume.pdf" class="button contact">Resume</a></li>
               <li><a href="#contact" class="button contact">Contact</a></li>
               <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
             </ul>
@@ -73,21 +73,22 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
-						<div class="descWrapper">
-							<h3>Barcelona</h3>
-              <p>A tapas app that helps explain the variety of food items on the menu</p>
-              <a href="#" class="button contact">View Project</a>
-						</div>
-					</div>
-
 					<div class="col-md-6">
             <picture>
               <source srcset="img/barcelona/barcelona_@1.jpg" media="(max-width:767px)">
               <img src="img/barcelona/barcelona_@2.jpg" alt="Barcelona">
             </picture>
-          </div>
-        </div>
+						</div>
+
+					<div class="col-md-6">
+							<div class="descWrapper">
+								<h3>Barcelona</h3>
+	              <p>A tapas app that helps explain the variety of food items on the menu</p>
+	              <a href="#" class="button contact">View Project</a>
+          	</div>
+        	</div>
+				</div>
+
 
         <div class="row">
           <div class="col-md-6">
@@ -108,38 +109,38 @@
 
         <div class="row">
           <div class="col-md-6">
-						<div class="descWrapper">
-							<h3>Adorn You</h3>
-              <p>A app that allows local artist to share and sell their work!</p>
-              <a href="#" class="button contact">View Project</a>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-            <picture>
+						<picture>
               <source srcset="img/adorn_you/adorn_you@1.jpg" media="(max-width:767px)">
               <img src="img/adorn_you/adorn_you@2.jpg" alt="Adorn You">
             </picture>
           </div>
+
+
+
+				<div class="col-md-6">
+					<div class="descWrapper">
+						<h3>Adorn You</h3>
+						<p>A app that allows local artist to share and sell their work!</p>
+						<a href="#" class="button contact">View Project</a>
+					</div>
         </div>
-      </div>
+      	</div>
 
+				<!-- For your footer -->
+			  <div class="container">
+			    <footer>
+			      <h1>Get In Touch!</h1>
+			      <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
+			      <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
+			      <p>Copyright Celia Diller 2020</p>
 
-  <!-- For your footer -->
-  <div class="container">
-    <footer>
-      <h1>Get In Touch!</h1>
-      <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-      <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-      <p>Copyright Celia Diller 2020</p>
+			    </footer>
+			  </div>
+			</div>
+			  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+			    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-    </footer>
-  </div>
-</div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+			  <script src="js/scripts.js"></script>
+			</body>
 
-  <script src="js/scripts.js"></script>
-</body>
-
-</html>
+			</html>
