--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul>
               <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
-              <li><a href="link_to_resume.pdf" class="button contact">Resume</a></li>
+              <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
               <li><a href="#contact" class="button contact">Contact</a></li>
               <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
             </ul>
