--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -33,9 +33,9 @@
 
 					<nav>
             <ul>
-              <li><a href="index.html" class="button contact">Work</a></li>
+							<li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
-              <li><a href="#resume" class="button contact">Resume</a></li>
+              <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
               <li><a href="#contact" class="button contact">Contact</a></li>
               <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
             </ul>
@@ -74,13 +74,13 @@
 							create a beautiful, aesthetically pleasing app.</p>
 
 							<picture>
-								<source srcset="img/graphic_detail/graphic_detail_long_artboard.jpg" media="(max-width:767px)">
-						  	<img src="img/graphic_detail/graphic_detail_long_artboard.jpg" alt="Graphic Detail">
+								<source srcset="img/graphic_detail/graphic_detail_long_artboard.png" media="(max-width:767px)">
+						  	<img src="img/graphic_detail/graphic_detail_long_artboard.png" alt="Graphic Detail">
 							</picture>
 
 							<picture>
-	              <source srcset="img/graphic_detail/graphic_style_guide.jpg" media="(max-width:767px)">
-	              <img src="img/graphic_detail/graphic_detail_style_guide.jpg" alt="Graphic Detail">
+	              <source srcset="img/graphic_detail/graphic_style_guide.png" media="(max-width:767px)">
+	              <img src="img/graphic_detail/graphic_detail_style_guide.png" alt="Graphic Detail">
 	            </picture>
 
 						</div>
